# pidgeot-engine

./: CMakeLists.txt  README.md  imgui.ini
libs/imgui/: imgui_impl_sdl.cpp  imgui_impl_sdl.h
resources/: pidgeot_engine.conf
resources/fonts/: apple_kid_regular_12.agefnt
resources/maps/: cave.tmx  cavesofgallet.tsx
src/application/src/: application.cpp  application.h  main.cpp  player.cpp  player.h
src/application/src/entities/: object.cpp  object.h  player.cpp  player.h
src/application/src/states/: states.h  test.cpp  test.h
src/application/src/tasks/: DebugTask.cpp  DebugTask.h  ExampleTask.cpp  ExampleTask.h  draw.cpp  draw.h  end.cpp  end.h  start.cpp  start.h  tasks.h
src/engine/src/: engine.cpp  engine.h  log.cpp  log.h  task.h  taskmanager.h
src/engine/src/core/: config.cpp  config.h  input.cpp  renderer.cpp  renderer.h  window.cpp  window.h
src/engine/src/managers/: cameramanager.cpp  cameramanager.h  entitymanager.cpp  entitymanager.h  gamestate.cpp  gamestate.h  mapmanager.cpp  mapmanager.h  resourcemanager.cpp  resourcemanager.h  statemanager.cpp  statemanager.h
src/engine/src/modules/: camera.cpp  camera.h  cameramanager.cpp  cameramanager.h  config.cpp  config.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  gamestate.cpp  gamestate.h  input.cpp  input.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  statemanager.cpp  statemanager.h  timer.h  window.cpp  window.h
src/engine/src/modules/map/: map.cpp  map.h  tile.h  tileset.cpp  tileset.h
src/engine/src/modules/resources/: animated_sprite.cpp  animated_sprite.h  resourcemanager.cpp  resourcemanager.h  sprite.cpp  sprite.h  text.cpp  text.h  texture.cpp  texture.h
src/engine/src/modules/resources/map/: map.cpp  map.h  tile.h  tileset.cpp  tileset.h
src/engine/src/resources/: text.cpp  text.h  texture.cpp
src/engine/src/resources/sprite/: animated_sprite.cpp  animated_sprite.h  sprite.cpp  sprite.h
src/engine/src/utils/: string-utils.h  uid.cpp  uid.h
