CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(PidgeotEngine)

SET_PROPERTY(GLOBAL PROPERTY ENGINE_LIBS "")
SET_PROPERTY(GLOBAL PROPERTY ENGINE_INCLUDES "")

OPTION(BUILD_STATIC_LIB OFF)
OPTION(BUILD_DYNAMIC_LIB OFF)

AUX_SOURCE_DIRECTORY(src/application/src SRC_APPLICATION)
aux_source_directory(src/application/src/tasks SRC_APPLICATION_TASKS)
AUX_SOURCE_DIRECTORY(src/engine/src SRC_ENGINE)
aux_source_directory(src/engine/src/modules SRC_ENGINE_MODULES)
aux_source_directory(src/engine/src/modules/map SRC_ENGINE_MODULES_MAP)

SET(SOURCES ${SRC_APPLICATION} ${SRC_APPLICATION_TASKS} ${SRC_ENGINE} ${SRC_ENGINE_MODULES} ${SRC_ENGINE_MODULES_MAP})

include(FindPkgConfig)

pkg_search_module(SDL2 REQUIRED sdl2)
pkg_search_module(SDL2IMAGE REQUIRED SDL2_image)
find_package(spdlog CONFIG REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(src/application/src src/engine/src)
INCLUDE_DIRECTORIES(vendor/spdlog/include)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)